# lines-rs

./: Cargo.toml  main.rs  test.txt
src/: main.rs
