[package]
name = "systems_design"
version = "0.2.0"
edition = "2018"
description = "a littlet test"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "lines"
path = "src/main.rs"
example = "lines test.txt"
